refactoring for clarity